# oroppas_endgame

./: .clang-format  .clang_complete  CMakeLists.txt  Doxyfile  README.md
make_hash_array/: make_hash_array.py
src/: CMakeLists.txt  board.cc  board.h  ffotest_file.h  logic.cc  main.cc  utility.cc  utility.h
src/include/: board.h  endgame.h  ffotest_file.h  logic.h  transposition_table.h  utility.h
src/lib/: CMakeLists.txt  board.cc  ffotest_file.cc  logic.cc  transposition_table.cc  utility.cc
test/: CMakeLists.txt  board_test.cc  main.cc
